--- a/Inserting_sql.ipynb
+++ b/Inserting_sql.ipynb
@@ -22,7 +22,7 @@
     "db_config = {\n",
     "    'host': 'Localhost',\n",
     "    'user': 'root',\n",
-    "    'password': '8november2002',\n",
+    "    'password': '',\n",
     "    'database': 'bhavDB',\n",
     "}\n",
     "connection = mysql.connector.connect(**db_config)\n",
